--- a/.config
+++ b/.config
@@ -1659,7 +1659,7 @@ CONFIG_PACKAGE_htop=y
 # CONFIG_PACKAGE_monit-nossl is not set
 # CONFIG_PACKAGE_muninlite is not set
 # CONFIG_PACKAGE_netatop is not set
-CONFIG_PACKAGE_netdata=y
+# CONFIG_PACKAGE_netdata is not set
 # CONFIG_PACKAGE_nyx is not set
 # CONFIG_PACKAGE_schroot is not set
 
@@ -1726,6 +1726,7 @@ CONFIG_PACKAGE_grub2-efi=y
 CONFIG_PACKAGE_autocore=y
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_autosamba=y
+# CONFIG_PACKAGE_fast-classifier-example is not set
 CONFIG_PACKAGE_ipv6helper=y
 # CONFIG_PACKAGE_jose is not set
 # CONFIG_PACKAGE_k3wifi is not set
@@ -2386,6 +2387,7 @@ CONFIG_PACKAGE_kmod-bonding=y
 # CONFIG_PACKAGE_kmod-capi is not set
 # CONFIG_PACKAGE_kmod-dnsresolver is not set
 CONFIG_PACKAGE_kmod-fast-classifier=y
+# CONFIG_PACKAGE_kmod-fast-classifier-noload is not set
 # CONFIG_PACKAGE_kmod-fou is not set
 # CONFIG_PACKAGE_kmod-fou6 is not set
 # CONFIG_PACKAGE_kmod-geneve is not set
@@ -4358,7 +4360,7 @@ CONFIG_PACKAGE_luci-app-minidlna=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
 # CONFIG_PACKAGE_luci-app-n2n_v2 is not set
-CONFIG_PACKAGE_luci-app-netdata=y
+# CONFIG_PACKAGE_luci-app-netdata is not set
 # CONFIG_PACKAGE_luci-app-nfs is not set
 # CONFIG_PACKAGE_luci-app-nft-qos is not set
 CONFIG_PACKAGE_luci-app-nlbwmon=y
@@ -4395,6 +4397,7 @@ CONFIG_PACKAGE_luci-app-sfe=y
 # CONFIG_PACKAGE_luci-app-simple-adblock is not set
 # CONFIG_PACKAGE_luci-app-softethervpn is not set
 # CONFIG_PACKAGE_luci-app-splash is not set
+# CONFIG_PACKAGE_luci-app-sqm is not set
 # CONFIG_PACKAGE_luci-app-squid is not set
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
@@ -4437,10 +4440,10 @@ CONFIG_PACKAGE_luci-app-zerotier=y
 #
 # 4. Themes
 #
-CONFIG_PACKAGE_luci-theme-argon=y
+# CONFIG_PACKAGE_luci-theme-argon is not set
 CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_luci-theme-freifunk-generic=y
-CONFIG_PACKAGE_luci-theme-material=y
+# CONFIG_PACKAGE_luci-theme-freifunk-generic is not set
+# CONFIG_PACKAGE_luci-theme-material is not set
 CONFIG_PACKAGE_luci-theme-netgear=y
 # end of 4. Themes
 
@@ -4605,7 +4608,7 @@ CONFIG_PACKAGE_luci-i18n-minidlna-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-mwan3-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-netdata-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-nlbwmon-ja is not set
 # CONFIG_PACKAGE_luci-i18n-nlbwmon-ru is not set
 CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=y
@@ -6224,35 +6227,6 @@ CONFIG_PACKAGE_bc=y
 # CONFIG_PACKAGE_cache-domains-openssl is not set
 # CONFIG_PACKAGE_cal is not set
 # CONFIG_PACKAGE_canutils is not set
-# CONFIG_PACKAGE_canutils-asc2log is not set
-# CONFIG_PACKAGE_canutils-bcmserver is not set
-# CONFIG_PACKAGE_canutils-can-calc-bit-timing is not set
-# CONFIG_PACKAGE_canutils-canbusload is not set
-# CONFIG_PACKAGE_canutils-candump is not set
-# CONFIG_PACKAGE_canutils-canfdtest is not set
-# CONFIG_PACKAGE_canutils-cangen is not set
-# CONFIG_PACKAGE_canutils-cangw is not set
-# CONFIG_PACKAGE_canutils-canlogserver is not set
-# CONFIG_PACKAGE_canutils-canplayer is not set
-# CONFIG_PACKAGE_canutils-cansend is not set
-# CONFIG_PACKAGE_canutils-cansniffer is not set
-# CONFIG_PACKAGE_canutils-isotpdump is not set
-# CONFIG_PACKAGE_canutils-isotpperf is not set
-# CONFIG_PACKAGE_canutils-isotprecv is not set
-# CONFIG_PACKAGE_canutils-isotpsend is not set
-# CONFIG_PACKAGE_canutils-isotpserver is not set
-# CONFIG_PACKAGE_canutils-isotpsniffer is not set
-# CONFIG_PACKAGE_canutils-isotptun is not set
-# CONFIG_PACKAGE_canutils-jacd is not set
-# CONFIG_PACKAGE_canutils-jcat is not set
-# CONFIG_PACKAGE_canutils-jspy is not set
-# CONFIG_PACKAGE_canutils-jsr is not set
-# CONFIG_PACKAGE_canutils-log2asc is not set
-# CONFIG_PACKAGE_canutils-log2long is not set
-# CONFIG_PACKAGE_canutils-slcan_attach is not set
-# CONFIG_PACKAGE_canutils-slcand is not set
-# CONFIG_PACKAGE_canutils-slcanpty is not set
-# CONFIG_PACKAGE_canutils-testj1939 is not set
 # CONFIG_PACKAGE_cgroup-tools is not set
 # CONFIG_PACKAGE_cgroupfs-mount is not set
 # CONFIG_PACKAGE_cmdpad is not set
