--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -17,8 +17,8 @@ on:
       - master
     paths:
       - '.config'
-  schedule:
-    - cron: 0 21 * * *
+#  schedule:
+#    - cron: 0 21 * * *
   watch:
     types: started
 
