--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -9,18 +9,19 @@
 name: Build OpenWrt
 
 on:
+  workflow_dispatch:
   repository_dispatch:
   release:
     types: published
-  push:
-    branches:
-      - master
-    paths:
-      - '.config'
-  schedule:
-    - cron: 0 20 * * 0
-  watch:
-    types: started
+#  push:
+#    branches:
+#      - master
+#    paths:
+#      - '.config'
+#  schedule:
+#    - cron: 0 20 * * 0
+#  watch:
+#    types: started
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
