--- a/.config
+++ b/.config
@@ -5167,9 +5167,9 @@ CONFIG_PACKAGE_wsdd2=y
 #
 # NeteaseMusic
 #
-CONFIG_PACKAGE_UnblockNeteaseMusic=y
-CONFIG_PACKAGE_UnblockNeteaseMusicGo=y
-CONFIG_UnblockNeteaseMusicGo_INCLUDE_GOPROXY=y
+# CONFIG_PACKAGE_UnblockNeteaseMusic is not set
+# CONFIG_PACKAGE_UnblockNeteaseMusicGo is not set
+# CONFIG_UnblockNeteaseMusicGo_INCLUDE_GOPROXY is not set
 # end of NeteaseMusic
 
 #
@@ -5225,15 +5225,14 @@ CONFIG_PACKAGE_v2ray=y
 #
 # V2Ray Configuration
 #
-CONFIG_V2RAY_COMPRESS_GOPROXY=y
-# CONFIG_V2RAY_JSON_V2CTL is not set
 CONFIG_V2RAY_JSON_INTERNAL=y
+# CONFIG_V2RAY_JSON_V2CTL is not set
 # CONFIG_V2RAY_JSON_NONE is not set
+CONFIG_V2RAY_COMPRESS_GOPROXY=y
 CONFIG_V2RAY_EXCLUDE_V2CTL=y
 CONFIG_V2RAY_EXCLUDE_ASSETS=y
 CONFIG_V2RAY_COMPRESS_UPX=y
-CONFIG_V2RAY_DISABLE_NONE=y
-# CONFIG_V2RAY_DISABLE_CUSTOM is not set
+# CONFIG_V2RAY_CUSTOM_FEATURES is not set
 # end of V2Ray Configuration
 
 CONFIG_PACKAGE_v2ray-plugin=y
@@ -6552,3 +6551,5 @@ CONFIG_STRACE_NONE=y
 # CONFIG_PACKAGE_fontconfig is not set
 # end of Font-Utils
 # end of Xorg
+
+CONFIG_OVERRIDE_PKGS="samba4 wget"
